[package]
name = "rusty_ghost"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
load-dotenv = "0.1.*"
gloo-net = "0.6.*"
gloo-console = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
wasm-bindgen = "0.2.*"
wasm-bindgen-futures = "0.4.*"
